@@ -1,16 +1,16 @@
 #! /bin/sh
 
-# Copyright (C) 2010 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2010-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
 # Using data sent by Akira Kakuto <kakuto@fuk.kindai.ac.jp>
 
-test -d tests || mkdir -p tests
+test -d ptests || mkdir -p ptests
 
-cp $srcdir/ptexdir/tests/nissya_bib.aux tests/nissya_bib.aux
+cp $srcdir/ptexdir/tests/nissya_bib.aux ptests/nissya_bib.aux
 
 TEXMFCNF=$srcdir/../kpathsea \
   BSTINPUTS=$srcdir/ptexdir/tests \
   BIBINPUTS=$srcdir/ptexdir/tests \
-  ./pbibtex tests/nissya_bib || exit 1
+  ./pbibtex ptests/nissya_bib || exit 1
 
