@@ -1,19 +1,19 @@
 #! /bin/sh
 
-# Copyright (C) 2011-2012 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2011-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-test -d tests || mkdir -p tests
+test -d uptests || mkdir -p uptests
 
 if tfmpath=`$KPSEWHICH cmbx10.tfm`; then
 
   TEXMFCNF=$srcdir/../kpathsea \
     TFMFONTS=`dirname "$tfmpath"` \
-    ./updvitype -show-opcodes $srcdir/tests/story >tests/xstory.dvityp || exit 1
+    ./updvitype -show-opcodes $srcdir/tests/story >uptests/xstory.dvityp || exit 1
 
 fi
 
 TEXMFCNF=$srcdir/../kpathsea \
   TFMFONTS=$srcdir/tests \
-  ./updvitype --p=\*.\*.2 $srcdir/tests/pagenum.dvi >tests/xpagenum.typ || exit 1
+  ./updvitype --p=\*.\*.2 $srcdir/tests/pagenum.dvi >uptests/xpagenum.typ || exit 1
 
